[package]
name = 'realis-bridge'
version = '0.0.1'
authors = ['exlead@gmail.com']
edition = '2018'

[dependencies]
# third-party dependencies
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }
serde = { version = '1.0.133', optional = true }
primitive-types = { version = "0.11.1", default-features = false }

frame-support = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false }
frame-system = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false }
sp-std = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false }
frame-benchmarking = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", version = "4.0.0-dev", default-features = false, optional = true }
sp-runtime = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false }
sp-io = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false }
sp-core = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false }
sp-arithmetic = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false }
pallet-balances = { default-features = false, git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9" }
realis-primitives = { path = "../../primitives/realis", default-features = false }
pallet-nft = { version = "0.0.2", path = "../nft", default-features = false }
realis-game-api = { version = "0.0.1", path = "../realis-game-api", default-features = false }

[dev-dependencies]
pallet-balances = { default-features = false, git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9" }
[build-dependencies]
wasm-builder-runner = { version = '3.0.0', package = 'substrate-wasm-builder-runner' }
[features]
default = ['std']
std = [
	'codec/std',
	'serde',
	'sp-std/std',
	'sp-runtime/std',
	"frame-benchmarking/std",
	'sp-io/std',
	'sp-core/std',
	'sp-arithmetic/std',
	'frame-support/std',
	'frame-system/std',
	'pallet-nft/std',
	"realis-primitives/std",
	"realis-game-api/std"
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
