[package]
name = "pallet-staking"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet staking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
static_assertions = "1.1.0"
serde_json = "1.0.79"
serde = { version = "1.0.133" }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false  }
sp-io ={ git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false  }
sp-runtime = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false  }
sp-staking = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false  }
frame-support = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false  }
frame-system = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false }
pallet-session = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false, features = ["historical"]}
pallet-authorship = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false  }
sp-application-crypto = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false  }
frame-election-provider-support = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false  }
log = { version = "0.4.17", default-features = false }
paste = "1.0"

# Optional imports for benchmarking
frame-benchmarking = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", default-features = false, optional = true }
rand_chacha = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
sp-storage = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9" }
sp-tracing = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9" }
sp-core = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9" }
pallet-balances = { default-features = false, git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9" }
pallet-timestamp = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9" }
pallet-staking-reward-curve = { version = "3.0.0",  path = "./reward-curve" }
substrate-test-utils = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9" }
frame-benchmarking = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9" }
frame-election-provider-support = { git = "https://github.com/RealisNetwork/substrate", branch = "polkadot-v0.9.9", features = ["runtime-benchmarks"] }
rand_chacha = { version = "0.3" }
parking_lot = "0.12.0"
hex = "0.4"
hex-literal = "0.3.4"

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"sp-application-crypto/std",
	"frame-election-provider-support/std",
	"log/std",
	"serde/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-election-provider-support/runtime-benchmarks",
	"rand_chacha",
]
try-runtime = ["frame-support/try-runtime"]
